fixed contrast errors

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body{
   .topnav a {
     float: left;
     display: block;
-    color: #6A5ACD;
+    color: #390868;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
